fixed issues with form being covered by footer on submission page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,6 +193,10 @@ footer {
 
 /*----------------form----------------*/
 
+form {
+    margin: 25px 0;
+}
+
 .form-control {
     margin-bottom: 30px;
 }
